--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
+# Copy to .env.local (local dev) or set in Vercel Project → Settings → Environment Variables
 
+OPENAI_API_KEY=sk-...
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=https://YOUR-PROJECT.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJ...
+
+# Optional Webhook (Make/Zapier/etc.)
+WEBHOOK_URL=
+WEBHOOK_SECRET=replace-with-32-char-secret
